Fix spacing of main blocks

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3549,7 +3549,7 @@
 		transition-delay: 0.25s;
 		cursor: default;
 		position: relative;
-		height: 36rem;
+		height: 40rem;
 		box-shadow: 0 2rem 4rem 0.25rem rgba(46, 43, 55, 0.575);
 	}
 
@@ -3633,7 +3633,7 @@
 			-ms-flex-direction: column;
 			flex-direction: column;
 			height: auto;
-			margin: 0 0 5rem 0;
+			margin: -18rem 0 5rem 0;
 			box-shadow: 0 0.25rem 1.5rem 0.25rem rgba(46, 43, 55, 0.5);
 		}
 
